--- a/basicSass/style.css
+++ b/basicSass/style.css
@@ -173,7 +173,7 @@ body {
   color: white;
 }
 
-@media only screen and (min-width: 375px), (min-heigth: 667px) {
+@media only screen and (min-width: 375px) and (min-heigth: 667px) {
   .header .right button {
     font-size: 1.9vh;
     height: 5vh;
@@ -186,7 +186,7 @@ body {
   }
 }
 
-@media only screen and (min-width: 425px), (min-height: 800px) {
+@media only screen and (min-width: 425px) and (min-height: 800px) {
   .header .right button {
     font-size: 1.65vh;
     height: 5vh;
@@ -196,7 +196,7 @@ body {
   }
 }
 
-@media only screen and (min-width: 768px), (min-height: 1024px) {
+@media only screen and (min-width: 768px) and (min-height: 1024px) {
   .header .left img {
     width: 20vw;
     height: auto;
@@ -219,14 +219,14 @@ body {
   }
 }
 
-@media only screen and (min-width: 1024px), (min-height: 768px) {
+@media only screen and (min-width: 1024px) and (min-height: 768px) {
   .header .left img {
     width: 17vw;
     height: auto;
   }
   .header .right button {
     height: 7vh;
-    font-size: 3vh;
+    font-size: 2vh;
   }
   .footer .footerContent button {
     font-size: 2.5vh;
@@ -236,7 +236,7 @@ body {
   }
 }
 
-@media only screen and (min-width: 1440px), (min-height: 900px) {
+@media only screen and (min-width: 1440px) and (min-height: 900px) {
   .header {
     position: fixed;
   }
@@ -261,7 +261,7 @@ body {
   }
 }
 
-@media only screen and (min-width: 2560px), (min-height: 1440px) {
+@media only screen and (min-width: 2560px) and (min-height: 1440px) {
   .header .left {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -296,7 +296,7 @@ body {
   }
 }
 
-@media only screen and (width: 412px), (height: 914px) {
+@media only screen and (width: 412px) and (height: 914px) {
   .header .left img {
     position: relative;
     bottom: 0.5vh;
@@ -322,7 +322,7 @@ body {
             align-items: center;
   }
   .header .right button {
-    font-size: 2.1vh;
+    font-size: 2vh;
     height: 4vh;
   }
   .header .right button svg {
@@ -336,7 +336,7 @@ body {
   }
 }
 
-@media only screen and (width: 1848px), (height: 949px) {
+@media only screen and (width: 1848px) and (height: 949px) {
   .header .left {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -379,7 +379,7 @@ body {
   }
 }
 
-@media only screen and (width: 360px), (height: 640px) {
+@media only screen and (width: 360px) and (height: 640px) {
   .header .left img {
     width: 23vw;
   }
@@ -395,7 +395,7 @@ body {
   }
 }
 
-@media only screen and (width: 411px), (height: 731px) {
+@media only screen and (width: 411px) and (height: 731px) {
   .header .left img {
     width: 25vw;
     height: auto;
@@ -411,7 +411,7 @@ body {
   }
 }
 
-@media only screen and (width: 411px), (height: 823px) {
+@media only screen and (width: 411px) and (height: 823px) {
   .header .left img {
     width: 25vw;
   }
@@ -427,7 +427,7 @@ body {
   }
 }
 
-@media only screen and (width: 411px), (height: 736px) {
+@media only screen and (width: 411px) and (height: 736px) {
   .header .left img {
     width: 25vw;
     height: auto;
@@ -440,7 +440,7 @@ body {
   }
 }
 
-@media only screen and (width: 375px), (height: 812px) {
+@media only screen and (width: 375px) and (height: 812px) {
   .header .left img {
     position: relative;
     bottom: 1vh;
@@ -459,7 +459,7 @@ body {
   }
 }
 
-@media only screen and (width: 768px), (height: 1024px) {
+@media only screen and (width: 768px) and (height: 1024px) {
   .header .right button {
     font-size: 2.2vh;
     height: 6vh;
@@ -472,7 +472,7 @@ body {
   }
 }
 
-@media only screen and (width: 1024px), (height: 1366px) {
+@media only screen and (width: 1024px) and (height: 1366px) {
   .header .right #settings {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -504,7 +504,7 @@ body {
   }
 }
 
-@media only screen and (width: 540px), (height: 720px) {
+@media only screen and (width: 540px) and (height: 720px) {
   .header .right {
     width: 65vw;
   }
@@ -539,7 +539,7 @@ body {
   }
 }
 
-@media only screen and (width: 280px), (height: 653px) {
+@media only screen and (width: 280px) and (height: 653px) {
   .header {
     height: 9vh;
   }
