--- a/shopSass/style.css
+++ b/shopSass/style.css
@@ -1,7 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Alef:wght@400;700&family=Rubik+Mono+One&family=Rubik:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@500;900&display=swap");
+html {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
+  width: 100vw;
   background-color: #1f1f1f;
 }
 
@@ -30,7 +36,7 @@ body {
 .main .card {
   top: 1.5vh;
   position: relative;
-  margin: 2vh;
+  margin: 3vh;
   width: 90vw;
   height: 30vh;
   border-radius: 15px;
@@ -165,6 +171,10 @@ body {
   font-weight: 900;
 }
 
+.main .card .text .desc p .title, .main .card .text .price p .title {
+  color: #FE3535;
+}
+
 .main .card .text .price {
   height: 5vh;
   display: -webkit-box;
@@ -186,5 +196,234 @@ body {
   font-size: 1.8vh;
   color: white;
   font-weight: 900;
+}
+
+@media only screen and (min-width: 375px) and (height: 667px) {
+  .main .card .text .desc p, .main .card .text .price p {
+    font-size: 1.6vh;
+  }
+}
+
+@media only screen and (min-width: 425px) and (min-height: 800px) {
+  .main .card .image .prodImg img {
+    height: 16vh;
+    width: auto;
+  }
+  .main .card .text .desc p, .main .card .text .price p {
+    font-size: 1.4vh;
+  }
+}
+
+@media only screen and (min-width: 768px) and (min-height: 1024px) {
+  .main .card {
+    width: 80vw;
+    height: auto;
+  }
+  .main .card .image {
+    width: 20vw;
+  }
+  .main .card .image .prodImg img {
+    width: 17vw;
+    height: auto;
+  }
+  .main .card .image .star .starImg {
+    height: 2.7vh;
+    width: auto;
+  }
+  .main .card .text {
+    width: 60vw;
+  }
+  .main .card .text .desc p, .main .card .text .price p {
+    font-size: 2vh;
+  }
+}
+
+@media only screen and (min-width: 1024px) and (min-height: 768px) {
+  .main .card {
+    position: relative;
+    top: 3vh;
+    width: 50vw;
+    height: auto;
+  }
+  .main .card .image {
+    width: 12vw;
+  }
+  .main .card .image .prodImg img {
+    width: 9vw;
+    height: auto;
+  }
+  .main .card .text {
+    width: 38vw;
+  }
+  .main .card .text .desc, .main .card .text .price {
+    width: 38vw;
+  }
+  .main .card .text .desc p, .main .card .text .price p {
+    font-size: 2vh;
+  }
+  .main .card .text .price {
+    width: 38vw;
+  }
+}
+
+@media only screen and (min-width: 412px) and (min-height: 914px) {
+  .main .card {
+    width: 90vw;
+  }
+  .main .card .image {
+    width: 25vw;
+  }
+  .main .card .image .prodImg img {
+    width: 23vw;
+    height: auto;
+  }
+  .main .card .image .star .starImg {
+    height: 2vh;
+    width: auto;
+  }
+  .main .card .text {
+    width: 65vw;
+  }
+  .main .card .text .desc, .main .card .text .price {
+    width: 65vw;
+  }
+  .main .card .text .desc p, .main .card .text .price p {
+    font-size: 1.6vh;
+  }
+  .main .card .text .price {
+    width: 65vw;
+    font-size: 1.6vh;
+  }
+}
+
+@media only screen and (min-width: 360px) and (min-height: 640px) {
+  .main .card .text .desc p, .main .card .text .price p {
+    font-size: 1.6vh;
+  }
+}
+
+@media only screen and (min-width: 411px) and (min-height: 823px) {
+  .main .card {
+    width: 90vw;
+  }
+  .main .card .image {
+    width: 25vw;
+  }
+  .main .card .image .prodImg img {
+    width: 22vw;
+    height: auto;
+  }
+  .main .card .image .star .starImg {
+    height: 2vh;
+    width: auto;
+  }
+  .main .card .text {
+    width: 65vw;
+  }
+  .main .card .text .desc, .main .card .text .price {
+    width: 65vw;
+  }
+  .main .card .text .price {
+    width: 65vw;
+  }
+}
+
+@media only screen and (min-width: 375px) and (min-height: 812px) {
+  .main .card {
+    width: 90vw;
+  }
+  .main .card .image {
+    width: 25vw;
+  }
+  .main .card .image .prodImg img {
+    width: 22vw;
+    height: auto;
+  }
+  .main .card .image .star .starImg {
+    height: 2vh;
+    width: auto;
+  }
+  .main .card .text {
+    width: 65vw;
+  }
+  .main .card .text .desc, .main .card .text .price {
+    width: 65vw;
+  }
+  .main .card .text .desc p, .main .card .text .price p {
+    font-size: 1.5vh;
+  }
+  .main .card .text .price {
+    width: 65vw;
+  }
+  .main .card .text .price p {
+    font-size: 1.5vh;
+  }
+}
+
+@media only screen and (min-width: 1024px) and (min-height: 1366px) {
+  .main .card .text .desc p, .main .card .text .price p {
+    font-size: 2vh;
+  }
+  .main .card .text .price p {
+    font-size: 2vh;
+  }
+  .main .card .image .star .starImg {
+    height: 3vh;
+    width: auto;
+  }
+}
+
+@media only screen and (min-width: 280px) and (min-height: 653px) {
+  .main .card .image {
+    width: 25vw;
+  }
+  .main .card .image .prodImg img {
+    width: 22vw;
+    height: auto;
+  }
+  .main .card .image .star .starImg {
+    height: 1.8vh;
+  }
+  .main .card .text {
+    width: 65vw;
+  }
+  .main .card .text .desc, .main .card .text .price {
+    width: 65vw;
+  }
+  .main .card .text .price {
+    width: 65vw;
+  }
+}
+
+@media only screen and (min-width: 1848px) and (min-height: 949px) {
+  .main .card {
+    width: 50vw;
+  }
+  .main .card .image {
+    width: 15vw;
+  }
+  .main .card .image .prodImg img {
+    width: 13vw;
+    height: auto;
+  }
+  .main .card .image .star .starImg {
+    height: 2.5vh;
+    width: auto;
+  }
+  .main .card .text {
+    width: 35vw;
+  }
+  .main .card .text .desc, .main .card .text .price {
+    width: 35vw;
+  }
+  .main .card .text .desc p, .main .card .text .price p {
+    font-size: 2.5vh;
+  }
+  .main .card .text .price {
+    width: 35vw;
+  }
+  .main .card .text .price p {
+    font-size: 2.5vh;
+  }
 }
 /*# sourceMappingURL=style.css.map */
